# dental-classifier

./: .gitignore  Makefile  Makefile.config  README.md  app.py  config.json  pyproject.toml  requirements.txt
src/: logger.py  viz.py
src/controllers/: classify_controller.py  dataset_controller.py  evaluate_controller.py  health_controller.py  train_vgg16_controller.py
src/model/: custom_vgg16.py  vgg16.py
src/services/: classify_service.py  evaluate_service.py  train_service.py
src/utils/: general_utils.py  gpu_utils.py  preprocess_utils.py  split_utils.py
