[tool.poetry]
name = "X-Ray Classification"
version = "0.1.0"
description = "A Dental Image X-Ray Classifier"
authors = ["Farah ElAkoum"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
tensorflow = "^2.10.0"
split-folders = "^0.5.1"
numba = "^0.56.4"
loguru = "^0.6.0"
python-multipart = "^0.0.5"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
mypy = "0.942"
black = "22.3.0"
isort = "5.10.1"
flake8 = "4.0.1"
sphinx = "4.5.0"
sphinx-rtd-theme = "1.0.0"

[tool.isort]
profile = "black"
lines_after_imports = "2"

[tool.mypy]
# --strict
ignore_missing_imports = true
# --strict end

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
